--- a/tasks3/tasks.json
+++ b/tasks3/tasks.json
@@ -1,1 +1,10 @@
-[]
+[
+  {
+    "id": 1,
+    "title": "Smoke",
+    "description": "test",
+    "completed": false,
+    "created_at": "2025-11-12T15:50:20.583252",
+    "completed_at": null
+  }
+]
