Removed log.sh files that tracked log of each directory(unneeded)

--- a/tasks2/tasks.json
+++ b/tasks2/tasks.json
@@ -1,14 +1,6 @@
 [
   {
     "id": 1,
-    "title": "Test 1",
-    "description": "",
-    "completed": false,
-    "created_at": "2025-11-11T22:46:37.544814",
-    "completed_at": null
-  },
-  {
-    "id": 2,
     "title": "Test 2",
     "description": "",
     "completed": false,
@@ -16,7 +8,7 @@
     "completed_at": null
   },
   {
-    "id": 3,
+    "id": 2,
     "title": "Test 3",
     "description": "",
     "completed": false,
@@ -24,27 +16,67 @@
     "completed_at": null
   },
   {
+    "id": 3,
+    "title": "Groceries",
+    "description": "milk,eggs,bread",
+    "completed": false,
+    "created_at": "2025-11-11T22:57:53.244125",
+    "completed_at": null
+  },
+  {
     "id": 4,
-    "title": "Buy groceries",
-    "description": "",
-    "completed": true,
-    "created_at": "2025-10-22T16:55:09.667201",
-    "completed_at": "2025-10-22T16:58:14.704353"
+    "title": "Buy some groceries today",
+    "description": "Get milk eggs and bread from store",
+    "completed": false,
+    "created_at": "2025-11-11T23:02:59.178401",
+    "completed_at": null
   },
   {
     "id": 5,
-    "title": "Beta",
-    "description": "second",
-    "completed": true,
-    "created_at": "2025-10-22T22:36:14.194157",
-    "completed_at": "2025-11-11T22:40:54.123584"
+    "title": "Task B",
+    "description": "",
+    "completed": false,
+    "created_at": "2025-11-11T23:19:38.141853",
+    "completed_at": null
   },
   {
     "id": 6,
-    "title": "Task 1",
+    "title": "Task D",
     "description": "",
-    "completed": true,
-    "created_at": "2025-11-11T22:46:19.852658",
-    "completed_at": "2025-11-11T22:46:37.680111"
+    "completed": false,
+    "created_at": "2025-11-11T23:19:38.231675",
+    "completed_at": null
+  },
+  {
+    "id": 7,
+    "title": "Task 2",
+    "description": "",
+    "completed": false,
+    "created_at": "2025-11-11T23:20:41.155433",
+    "completed_at": null
+  },
+  {
+    "id": 8,
+    "title": "Task 4",
+    "description": "",
+    "completed": false,
+    "created_at": "2025-11-11T23:20:41.246732",
+    "completed_at": null
+  },
+  {
+    "id": 9,
+    "title": "Test D",
+    "description": "",
+    "completed": false,
+    "created_at": "2025-11-11T23:21:56.555224",
+    "completed_at": null
+  },
+  {
+    "id": 10,
+    "title": "Test E",
+    "description": "",
+    "completed": false,
+    "created_at": "2025-11-11T23:21:56.600497",
+    "completed_at": null
   }
 ]
